selfhost/test/typechecker/indexing/array_error_idx_non_int.out
Error at %FILE_NAME%:2:5
Type mismatch
  |  arr[1.2]
         ^
Expected: Int
but instead found: Float
