selfhost/test/typechecker/indexing/array_error_idx_non_int.abra
val arr = [1, 2, 3]
arr[1.2]